--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,6 @@
     "name": "Selsynn/testPHPComposer",
     "require": {
         "monolog/monolog": "1.0.*"
-    }
+    },
+    "version":"1.0.0"
 }
